--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ Kode modifikasi dari https://webglfundamentals.org/ -->
     gl_FragColor = u_color;
     }
     </script>
-    <script src="./utils.js"></script>
-    <script src="./ui.js"></script>
-    <script src="./script.js"></script>
+    <script src="./scripts/utils.js"></script>
+    <script src="./scripts/ui.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
